--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
     "linebreak-style": "off",
     "comma-dangle": "off",
     "no-unused-vars": "warn",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "spaced-comment": "off",
+    "object-curly-spacing": "off",
+    "no-trailing-spaces": "off"
   }
 }
