--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/prop-types": "off",
     "spaced-comment": "off",
     "object-curly-spacing": "off",
-    "no-trailing-spaces": "off"
+    "no-trailing-spaces": "off",
+    "prefer-const": "off"
   }
 }
