--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
     "spaced-comment": "off",
     "object-curly-spacing": "off",
     "no-trailing-spaces": "off",
-    "prefer-const": "off"
+    "prefer-const": "off",
+    "react/jsx-key": "off",
+    "indent": "off"
   }
 }
