--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "padded-blocks": "off",
     "linebreak-style": "off",
     "comma-dangle": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "spaced-comment": "off",
