종합 예제 템플릿 완성 - Cart

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-trailing-spaces": "off",
     "prefer-const": "off",
     "react/jsx-key": "off",
-    "indent": "off"
+    "indent": "off",
+    "max-len": "off"
   }
 }
